Updated getFileDownloadResponse() logic in UriBuilderService.
If the retentionUntil of retrieved object is null, is now updated in DynamoDB and returned correctly.